--- a/index.html
+++ b/index.html
@@ -1,18 +1,19 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="cs">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AISS-OS Synthesis</title>
-    <link rel="stylesheet" href="./src/styles/ubuntu_theme.css">
-  </head>
-  <body style="display: flex; align-items: center; justify-content: center; height: 100vh; margin: 0;">
-    <div id="aiss-os-root" class="glass-panel" style="width: 90%; max-width: 400px; text-align: center;">
-      <p>Inicializace jádra systému...</p>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>AISS-OS | Synthesis Studio</title>
+    <style>
+        body { background-color: #300a24; color: #e95420; font-family: sans-serif; text-align: center; padding: 50px; }
+        .glass-panel { background: rgba(255,255,255,0.05); padding: 20px; border-radius: 15px; border: 1px solid rgba(255,255,255,0.1); }
+    </style>
+</head>
+<body>
+    <div class="glass-panel">
+        <h1>[AISS-OS JÁDRO AKTIVNÍ]</h1>
+        <p>Vítejte ve Studiu Synthesis. Telemetrie v pořádku.</p>
+        <a href="/admin" style="color: white;">Vstoupit do Centrály (CMS)</a>
     </div>
-    <script type="module">
-      import { nastartuj_system } from './src/moduly/Zavadec_SSM.ts';
-      nastartuj_system();
-    </script>
-  </body>
+</body>
 </html>
